[package]
name = "websocket_gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version="1",features=["full"]}
anyhow="1"
tcpclient = "1.3.4"
ahash ="0.7"
aqueue = "1"
log = "0.4"
async-trait = "0.1"
data-rw="1.6"
bytes="1.1"
bi-directional-pipe = "0.1"
chrono="0.4"
env_logger="0.9"
serde={version="1",features=["derive"]}
serde_json="1"
lazy_static = "1.4"