[package]
name = "websocket_gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default=["flexi_log"]
flexi_log=["flexi_logger"]
env_log=["env_logger"]

[dependencies]
tokio = {version="1",features=["full"]}
anyhow="1"
tcpclient = "1.3"
websocket-server-async ="0.1"
ahash ="0.7"
aqueue = "1.2"
log = "0.4"
async-trait = "0.1"
data-rw="1.6"
bytes="1.1"
bi-directional-pipe = "0.1"
chrono="0.4"
serde={version="1",features=["derive"]}
serde_json="1"
lazy_static = "1.4"
structopt="0.3"
flexi_logger={version="0.22",features=["async","use_chrono_for_offset"],optional =true}
env_logger = {version="0.9",optional =true}


[build-dependencies]
anyhow="1.0"
vergen="5"

[profile.release]
panic="abort"
lto = true
codegen-units = 1